--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,11 @@ uvicorn[standard]>=0.29.0
 pydantic>=2.8.0
 pydantic-settings>=2.4.0
 motor>=3.4.0
+pymongo>=4.6.0
+email-validator>=2.1.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.24.0
